Modificado dropdown para evitar que se mueva de arriba a abajo en pantallas pequeñas

--- a/src/app/platform/components/availability/availability.component.html
+++ b/src/app/platform/components/availability/availability.component.html
@@ -6,9 +6,10 @@
         <div class="form-group">
           <label i18n="@@destination">Destination:</label>
 
-          <tag-input name="auto" [onAdding]="onAdd" [maxItems]="maxItems" [theme]="'bootstrap'" [(ngModel)]="criteria.items" [placeholder]="'Hotel or Destination'"
-            [secondaryPlaceholder]="'...'" [onTextChangeDebounce]="500" [onlyFromAutocomplete]="true" [disable]="!accessesToSearch || accessesToSearch.length === 0"
-            [class]="getDisabled(accessesToSearch, 'autocompleter')" [clearOnBlur]="true" #searcher>
+          <tag-input name="auto" [onAdding]="onAdd" [maxItems]="maxItems" [theme]="'bootstrap'" [(ngModel)]="criteria.items"
+            [placeholder]="'Hotel or Destination'" [secondaryPlaceholder]="'...'" [onTextChangeDebounce]="500" [onlyFromAutocomplete]="true"
+            [disable]="!accessesToSearch || accessesToSearch.length === 0" [class]="getDisabled(accessesToSearch, 'autocompleter')"
+            [clearOnBlur]="true" #searcher>
 
             <ng-template let-item="item" let-index="index">
               <span (click)="onRemoveItem(item, index)" class="ng2-tag__remove-button">x</span>
@@ -16,7 +17,7 @@
               <span *ngIf="!item.destination">[H] - {{item.display}} - ({{item.value}})</span>
             </ng-template>
 
-            <tag-input-dropdown [offset]="getDropdownOffset(mo_main_search_element.getBoundingClientRect()) || '44 6'" [minimumTextLength]="3"
+            <tag-input-dropdown [dynamicUpdate]="false" [offset]="getDropdownOffset(mo_main_search_element.getBoundingClientRect()) || '44 6'" [minimumTextLength]="3"
               [autocompleteObservable]="requestAutocompleteItems" [appendToBody]="true">
               <ng-template let-item="item" let-index="index">
                 <span *ngIf="item.destination">[D] - {{item.display}} - ({{item.value}})</span>
@@ -34,9 +35,9 @@
         <div class="form-group">
           <label i18n="@@date-from">Date from:</label>
           <input style="background-color: white;" class="form-control" placeholder="YYYY-MM-DD" [minDate]="now" name="startDate" [(ngModel)]="criteria.checkIn"
-            ngbDatepicker #sToggle="ngbDatepicker" (click)="sToggle.toggle(); eToggle.close();$event.stopPropagation()" (close)="eToggle.open()" (ngModelChange)="onChange(sToggle, eToggle)"
-            (document:click)="decideIfClose($event, sToggle)"
-            [disabled]="!accessesToSearch || accessesToSearch.length === 0" readonly>
+            ngbDatepicker #sToggle="ngbDatepicker" (click)="sToggle.toggle(); eToggle.close();$event.stopPropagation()" (close)="eToggle.open()"
+            (ngModelChange)="onChange(sToggle, eToggle)" (document:click)="decideIfClose($event, sToggle)" [disabled]="!accessesToSearch || accessesToSearch.length === 0"
+            readonly>
         </div>
       </div>
       <div class="col-md-4">
@@ -45,8 +46,8 @@
           <div class="input-group">
             <input style="background-color: white;" class="form-control" placeholder="YYYY-MM-DD" [minDate]="minDateTo" name="endDate"
               [(ngModel)]="criteria.checkOut" ngbDatepicker #eToggle="ngbDatepicker" (click)="eToggle.toggle(); sToggle.close();$event.stopPropagation()"
-              (document:click)="decideIfClose($event, eToggle)"
-              [disabled]="!accessesToSearch || accessesToSearch.length === 0" readonly>
+              (document:click)="decideIfClose($event, eToggle)" [disabled]="!accessesToSearch || accessesToSearch.length === 0"
+              readonly>
           </div>
         </div>
       </div>
@@ -67,18 +68,18 @@
       <div class="col-md-4">
         <div class="form-group">
           <label i18n="@@language">Language:</label>
-          <input type="text" class="form-control" [(ngModel)]="criteria.language" languageMatch name="language" [ngbTypeahead]="languageFilter" [disabled]="!accessesToSearch || accessesToSearch.length === 0"
-            placeholder="Select Language" i18n-placeholder="@@market-placeholder" [resultFormatter]="languageResultFormatter"
-            [inputFormatter]="languageInputFormatter" />
+          <input type="text" class="form-control" [(ngModel)]="criteria.language" languageMatch name="language" [ngbTypeahead]="languageFilter"
+            [disabled]="!accessesToSearch || accessesToSearch.length === 0" placeholder="Select Language" i18n-placeholder="@@market-placeholder"
+            [resultFormatter]="languageResultFormatter" [inputFormatter]="languageInputFormatter" />
         </div>
       </div>
       <div class="col-md-4">
         <div class="form-group">
           <label i18n="@@currency">Currency:</label>
           <div class="input-group">
-            <input type="text" class="form-control" [(ngModel)]="criteria.currency" currencyMatch name="currency" [ngbTypeahead]="currencyFilter" [disabled]="!accessesToSearch || accessesToSearch.length === 0"
-              placeholder="Select Currency" i18n-placeholder="@@market-placeholder" [resultFormatter]="currencyResultFormatter"
-              [inputFormatter]="currencyInputFormatter"/>
+            <input type="text" class="form-control" [(ngModel)]="criteria.currency" currencyMatch name="currency" [ngbTypeahead]="currencyFilter"
+              [disabled]="!accessesToSearch || accessesToSearch.length === 0" placeholder="Select Currency" i18n-placeholder="@@market-placeholder"
+              [resultFormatter]="currencyResultFormatter" [inputFormatter]="currencyInputFormatter" />
           </div>
         </div>
       </div>
