--- a/src/app/platform/pages/result-bookings/result-bookings.component.html
+++ b/src/app/platform/pages/result-bookings/result-bookings.component.html
@@ -113,7 +113,7 @@
       </div>
       <div class="col-md-3">
         <a class="btn btn-info smy" (click)="showRequest()" i18n="@@show-request">Show RQ</a>
-        <a class="btn btn-danger smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</a>
+        <a class="btn btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</a>
       </div>
     </div>
   </div>
