--- a/src/app/platform/components/valuation-modal/valuation-modal.component.html
+++ b/src/app/platform/components/valuation-modal/valuation-modal.component.html
@@ -26,14 +26,18 @@
     </div>
   </div>
   <div>
+    <div class="cancellation">
+      <div class="row">
+        <div class="col-md-3 offset-md-9">
+          <button class="btn btn-sm btn-info smy" (click)="showRequest()" i18n="@@show-request">Show RQ</button>
+          <button class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</button>
+        </div>
+      </div>
+    </div>
     <div class="cancellation" *ngIf="quote.remarks">
       <div class="row">
         <div class="col-md-8">
           <h3 class="tit" i18n="@@remarks">Remarks</h3>
-        </div>
-        <div class="col-md-4">
-            <a class="btn btn-sm btn-info smy" (click)="showRequest()" i18n="@@show-request">Show RQ</a>
-            <a class="btn btn-sm btn-info smy ml-10" (click)="showResponse()" i18n="@@show-response">Show RS</a>
         </div>
       </div>
 
