--- a/src/app/platform/components/rs-modal/rs-modal.component.html
+++ b/src/app/platform/components/rs-modal/rs-modal.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="summary modal-body">
     <pre #pre style="max-height: 70vh; overflow-y:auto">
-          {{book | json}}
+      {{payload | json}}
     </pre>
   </div>
   <div class="modal-footer">
