--- a/src/assets/css/travelgatex.css
+++ b/src/assets/css/travelgatex.css
@@ -1617,6 +1617,9 @@ pre {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #eceeef; }
+  .table tr:nth-child(even) td {
+    border-top: 0px solid #eceeef;
+  }
   .table thead th {
     vertical-align: bottom;
     border-bottom: 2px solid #eceeef; }
