--- a/src/app/platform/pages/my-bookings/my-bookings.component.html
+++ b/src/app/platform/pages/my-bookings/my-bookings.component.html
@@ -38,7 +38,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <label>
-                <span i18n="@@client-reference">Client reference:</span>
+                <span i18n="@@client-reference">Client reference</span>:
                 <a class="tip" data-toggle="tooltip" data-placement="top">
                   <i class="fa fa-question-circle" aria-hidden="true"></i>
                 </a>
@@ -49,7 +49,7 @@
           <div class="col-md-3">
             <div class="form-group">
               <label>
-                <span i18n="@@supplier-reference">Supplier reference:</span>
+                <span i18n="@@supplier-reference">Supplier reference</span>:
                 <a class="tip" data-toggle="tooltip" data-placement="top">
                   <i class="fa fa-question-circle" aria-hidden="true"></i>
                 </a>
