--- a/src/app/platform/components/hotel-option/hotel-option.component.html
+++ b/src/app/platform/components/hotel-option/hotel-option.component.html
@@ -67,30 +67,19 @@
             <td>{{option.rateRules | package}}</td>
             <td>{{option.paymentType}}</td>
 
-            <ng-container *ngIf="option.price.binding; else noBinding">
-              <td (click)="openBindingModal(option)">
-                <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top" i18n-title="@@penalty-tooltip"
-                  title="Binding"></i>
-                <span i18n="@@min-sell-price">Minimum selling price</span>
-              </td>
-              <td>
-                <div *ngFor="let room of option.rooms">{{room.roomPrice.price.gross | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
-              </td>
-              <td class="price">
-                {{option.price.gross | number : '1.2-2'}} {{option.price.currency}}
-              </td>
-            </ng-container>
+            <td>
+              <span i18n="@@net" *ngIf="!option.price.binding; else gross">Net</span>
+              <ng-template #gross>
+                <span i18n="@@gross">Gross</span>
+              </ng-template>
 
-            <ng-template #noBinding>
-              <td i18n="@@net">Net</td>
-              <td>
-                <div *ngFor="let room of option.rooms">{{room.roomPrice.price.net | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
-              </td>
-              <td class="price">
-                {{option.price.net | number : '1.2-2'}} {{option.price.currency}}
-              </td>
-            </ng-template>
-
+            </td>
+            <td>
+              <div style="white-space: nowrap;" (click)="openBindingModal(option)" href="javascript:void(0)" *ngFor="let room of option.rooms">{{room.roomPrice.price.gross | number : '1.2-2'}} {{room.roomPrice.price.currency}}</div>
+            </td>
+            <td class="price">
+                <a (click)="openBindingModal(option)" href="javascript:void(0)">{{option.price.gross | number : '1.2-2'}} {{option.price.currency}}</a>
+            </td>
 
             <td align="right">
               <p>
